--- a/page.html
+++ b/page.html
@@ -55,15 +55,15 @@
             <i class="bx bx-home"></i>
             <span class="nav-link-title">Home</span>
           </a>
-          <a href="#home" class="nav-link">
+          <a href="#popular" class="nav-link">
             <i class="bx bxs-hot"></i>
             <span class="nav-link-title">Trending</span>
           </a>
-          <a href="page.html" class="nav-link nav-active">
+          <a href="#movies" class="nav-link nav-active">
             <i class="bx bx-compass"></i>
             <span class="nav-link-title">Explore</span>
           </a>
-          <a href="#home" class="nav-link">
+          <a href="page.html" class="nav-link">
             <i class="bx bx-tv"></i>
             <span class="nav-link-title">Movies</span>
           </a>
@@ -105,9 +105,67 @@
       <i class="bx bx-right-arrow play-movie"></i>
       <div class="video-container">
         <div class="video-box">
-            <video id="myvideo" src="images/play-page/Jumanji.mp4" controls></video>
-            <i class='bx bx-x close-video' ></i>
+          <video
+            id="myvideo"
+            src="images/play-page/Jumanji.mp4"
+            controls
+          ></video>
+          <i class="bx bx-x close-video"></i>
         </div>
+      </div>
+    </div>
+
+    <!-- About  -->
+    <div class="about-movie container">
+      <h2>Jumanji: Welcome to The Jungle</h2>
+      <p>
+        When four students play a magical video game, they are drawn to the
+        Jungle world of Jumanji, where they are trapped as their avatars. To
+        return to the real world, they must finish the game.
+      </p>
+
+      <!-- Movie Cast  -->
+      <h2 class="cast-heading">Movie Cast</h2>
+      <div class="cast">
+        <div class="cast-box">
+          <img src="images/play-page/cast1.jpg" alt="" class="cast-img">
+          <span class="cast-title">Dwayne Johnson</span>
+        </div>
+
+        <div class="cast-box">
+          <img src="images/play-page/cast2.jpg" alt="" class="cast-img">
+          <span class="cast-title">Karen Gillan</span>
+        </div>
+
+        <div class="cast-box">
+          <img src="images/play-page/cast3.jpg" alt="" class="cast-img">
+          <span class="cast-title">Kevin Hart</span>
+        </div>
+
+        <div class="cast-box">
+          <img src="images/play-page/cast4.jpg" alt="" class="cast-img">
+          <span class="cast-title">Jack Black</span>
+        </div>
+
+        <div class="cast-box">
+          <img src="images/play-page/cast5.jpg" alt="" class="cast-img">
+          <span class="cast-title">Nick Jonas</span>
+        </div>
+
+        <div class="cast-box">
+          <img src="images/play-page/cast6.jpg" alt="" class="cast-img">
+          <span class="cast-title">Madison Iseman</span>
+        </div>
+      </div>
+    </div>
+
+    <!-- Download  -->
+    <div class="download">
+      <h2 class="download-title">Download Movie</h2>
+      <div class="download-links">
+        <a href="images/play-page/Jumanji.mp4" download>480p</a>
+        <a href="images/play-page/Jumanji.mp4" download>720p</a>
+        <a href="images/play-page/Jumanji.mp4" download>1080p</a>
       </div>
     </div>
 
