--- a/page.html
+++ b/page.html
@@ -128,33 +128,33 @@
       <h2 class="cast-heading">Movie Cast</h2>
       <div class="cast">
         <div class="cast-box">
-          <img src="images/play-page/cast1.jpg" alt="" class="cast-img">
-          <span class="cast-title">Dwayne Johnson</span>
+          <img src="images/play-page/photo_2023-07-07_11-06-42.jpg" alt="" class="cast-img">
+          <span class="cast-title"> Ha Giang</span>
         </div>
 
         <div class="cast-box">
-          <img src="images/play-page/cast2.jpg" alt="" class="cast-img">
-          <span class="cast-title">Karen Gillan</span>
+          <img src="images/play-page/photo_2023-07-07_11-06-44.jpg" alt="" class="cast-img">
+          <span class="cast-title">Van Thuong</span>
         </div>
 
         <div class="cast-box">
-          <img src="images/play-page/cast3.jpg" alt="" class="cast-img">
-          <span class="cast-title">Kevin Hart</span>
+          <img src="images/play-page/photo_2023-07-07_11-06-45.jpg" alt="" class="cast-img">
+          <span class="cast-title">Trung Dung </span>
         </div>
 
         <div class="cast-box">
-          <img src="images/play-page/cast4.jpg" alt="" class="cast-img">
-          <span class="cast-title">Jack Black</span>
+          <img src="images/play-page/photo_2023-07-07_11-14-34.jpg" alt="" class="cast-img">
+          <span class="cast-title">Huy Truong </span>
         </div>
 
         <div class="cast-box">
-          <img src="images/play-page/cast5.jpg" alt="" class="cast-img">
-          <span class="cast-title">Nick Jonas</span>
+          <img src="images/play-page/photo_2023-07-07_11-14-36.jpg" alt="" class="cast-img">
+          <span class="cast-title">Ngo Hoang</span>
         </div>
 
         <div class="cast-box">
-          <img src="images/play-page/cast6.jpg" alt="" class="cast-img">
-          <span class="cast-title">Madison Iseman</span>
+          <img src="images/play-page/photo_2023-07-07_11-14-50.jpg" alt="" class="cast-img">
+          <span class="cast-title">Luu Thanh</span>
         </div>
       </div>
     </div>
